# SimpleFractals

./: CMakeLists.txt  README.md  SomeFracts  cmplxnum.h  main.cpp  mandelbrhot.cpp  mandelbrhot.h  sdl-library.cpp  sdl-library.h  todo
